# cc-project-steganography-telegram-bot

./: .gitignore  README.md  cc.yaml  pyproject.toml  runme.sh
docu/: LSB-on-images.md  how_to_use_the_bot.md  telegram-bot-quick-guide.md
milestone-docu/0-milestone/: git-github-setup.md  problem-description.md  setup-environment.md
milestone-docu/1-milestone/: class-definition.md  user-definition.md
milestone-docu/2-milestone/: test-strategy.md
src/: main.py
src/Admin/: Admin.py
src/Auth/: Auth.py
src/Persistance/: Persistance.py
src/TelegramBot/: TelegramBot.py
src/TelegramBot/Steganography/: Steganography.py
src/admin-interface/: admin-interface.py
src/auth/: auth.py
src/persistance/: persistance.py
src/steganography/: steganography.py
src/telegram-bot/: telegram-bot.py
steganobot/: steganobot.py
steganobot/persistance/: persistance.py
steganobot/steganography/: steganography.py
steganobot/tests/: steganography_test.py
